--- a/dependencies/styles/layout.css
+++ b/dependencies/styles/layout.css
@@ -77,6 +77,14 @@ h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:16px; font-weight:bold; fo
 #header nav li a{}
 #header nav li a:hover{color:#FF9900; background-color:#FFFFFF;}
 
+#logosite{
+	
+  margin-left: 15%;
+  margin-right: auto;
+  height:330px; /* largeur obligatoire pour être centré */
+
+}
+
 /*----------------------------------------------Content Area-------------------------------------*/
 
 #container{padding:30px 0;}
